<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.main.MainActivity">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/hello_ahmed"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text1" />

        <LinearLayout
            android:id="@+id/layoutSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/background_search"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/text2">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_search"
                app:tint="@color/black" />

            <EditText
                android:id="@+id/inputSearch"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:background="@null"
                android:hint="@string/search_text"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textSize="13sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvPlayers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/players"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutSearch" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/textTransfers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPlayers" />

        <TextView
            android:id="@+id/textTransfers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="5dp"
            android:text="@string/top_transfers"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/view1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerView" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="20dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/shape_transfer_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="25dp"
            android:src="@drawable/img_dummy"
            app:layout_constraintBottom_toBottomOf="@id/view1"
            app:layout_constraintStart_toStartOf="@id/view1"
            app:layout_constraintTop_toTopOf="@id/view1"
            app:riv_corner_radius="20dp" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="25dp"
            android:src="@drawable/img_dummy"
            app:layout_constraintBottom_toBottomOf="@id/view1"
            app:layout_constraintEnd_toEndOf="@id/view1"
            app:layout_constraintTop_toTopOf="@id/view1"
            app:riv_corner_radius="20dp" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/ahmed_ali"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/view1"
            app:layout_constraintStart_toStartOf="@id/view1"
            app:layout_constraintTop_toTopOf="@id/view1" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forward"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/view1"
            app:layout_constraintStart_toStartOf="@id/view1"
            app:layout_constraintTop_toBottomOf="@id/text3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_radius"
            android:backgroundTint="@color/purple"
            android:padding="1dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/_11_50_00_00"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/view1"
            app:layout_constraintStart_toStartOf="@id/view1"
            app:layout_constraintTop_toBottomOf="@id/text4" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
