<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_background"
        tools:context=".presentation.splash.WelcomeActivity">

        <TextView
            android:id="@+id/textCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeMinTextSize="20sp"
            android:autoSizeTextType="uniform"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:lines="1"
            android:text="@string/zimozi"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autoSizeMaxTextSize="35sp"
            android:autoSizeMinTextSize="30sp"
            android:autoSizeTextType="uniform"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:lines="1"
            android:text="@string/tennisapplication"
            android:textAllCaps="true"
            android:textColor="@color/yellow"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textCompany" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline" />

        <ImageView
            android:id="@+id/ic_logo"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_player"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
